--- a/backend/package.json
+++ b/backend/package.json
@@ -1,25 +1,34 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "Instagram-Clone using MongoDB Express React Node.js",
+  "description": "Social Media App",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon src/server.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ProgrammingYatra/Instagram-Clone.git"
+    "url": "git+https://github.com/ProgrammingYatra/SOCIAL-MEDIA-APP.git"
   },
   "keywords": [
-    "MongoDB",
-    "Express",
-    "React",
-    "Node.js"
+    "MERN"
   ],
-  "author": "Dev Gupta",
+  "author": "Rupam gupta",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/ProgrammingYatra/Instagram-Clone/issues"
+    "url": "https://github.com/ProgrammingYatra/SOCIAL-MEDIA-APP/issues"
   },
-  "homepage": "https://github.com/ProgrammingYatra/Instagram-Clone#readme"
+  "homepage": "https://github.com/ProgrammingYatra/SOCIAL-MEDIA-APP#readme",
+  "dependencies": {
+    "aws-sdk": "^2.1323.0",
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^6.10.0",
+    "multer": "^1.4.5-lts.1"
+  }
 }
